--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,10 +24,13 @@ jobs:
       - uses: actions/setup-go@v6
         with:
           go-version: '1.24'
-      - run: go build -o $filename ./cmd
+      - run: |
+          go build -o $filename ./cmd
+          echo "filename=$filename" >> "$GITHUB_OUTPUT"
+        id: compile
       - uses: actions/upload-artifact@v4
         with:
-          name: $filename
+          name: ${{ steps.compile.outputs.filename }}
           path: |
             fritzcable_exporter_*
   hash:
