--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
     branches: [ "main" ]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: arc-runner-set
     strategy:
       matrix:
         goos: [ "linux", "darwin", "windows" ]
@@ -36,7 +36,7 @@ jobs:
           path: |
             fritzcable_exporter_*
   release:
-    runs-on: ubuntu-latest
+    runs-on: arc-runner-set
     needs: build
     if: github.ref_type == 'tag'
     permissions: 
